[package]
name = "hackathon-05-11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["shader_format_glsl"] }
bevy_egui = "0.27.0"
bevy_http_client = "0.5.2"
dotenv = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
whisper-rs = "0.11.1"
crossbeam-channel = "0.5.12"
serde_json = "1.0.117"
warp = "0.3.7"
tokio = {  version = "1.37.0", features = ["rt-multi-thread"] }
bytemuck = "1.15.0"
rand = "0.8.5"
bevy_pixels = "0.13.0"
rodio = "0.18.0"
reqwest = { version = "0.12.4", features = ["json"] }

[profile.dev.package."*"]
opt-level = 3
